ENTREGA_P3_SEMANTICO/P3_MARCO_GARCIA_PABLO_ROIG/tests/invalid/26_invalid_duplicate_function.lava
int f(int value) {
  return value;
}

float f(int value) {
  return value;
}
